recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: type mismatch;
 found   : Double
 required: Int
	current(e)
                ^